fixed Temperture Animation Firefox; added alt-Tags

--- a/stats.css
+++ b/stats.css
@@ -167,7 +167,7 @@
 }
 
 .stats-row .card {
-    min-height: 17vh;
+    min-height: 22vh;
 }
 
 #uvIndex {
